--- a/proyecto/Proyecto.ipynb
+++ b/proyecto/Proyecto.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\marcp\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Date      Time                                         Tweet_Text  Type Media_Type   Hashtags   Tweet_Id                                          Tweet_Url  twt_favourites_IS_THIS_LIKE_QUESTION_MARK  Retweets  Unnamed: 10  Unnamed: 11                                      cleaned_tweet\n",
+      "0  16-11-11  15:26:37  Today we express our deepest gratitude to all ...  text      photo  ThankAVet  7.970e+17  https://twitter.com/realDonaldTrump/status/797...                                     127213     41112          NaN          NaN  today express deepest gratitud serv arm thankavet\n",
+      "1  16-11-11  13:33:35  Busy day planned in New York. Will soon be mak...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/797...                                     141527     28654          NaN          NaN  busi day plan new soon make import decis peopl...\n",
+      "2  16-11-11  11:14:20  Love the fact that the small groups of protest...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/797...                                     183729     50039          NaN          NaN  love fact small group protest last night passi...\n",
+      "3  16-11-11   2:19:44  Just had a very open and successful presidenti...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/796...                                     214001     67010          NaN          NaN    open success presidenti profession incit unfair\n",
+      "4  16-11-11   2:10:46  A fantastic day in D.C. Met with President Oba...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/796...                                     178499     36688          NaN          NaN  fantast day met presid obama first realli good...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import SnowballStemmer\n",
+    "# Preparación de las herramientas de preprocesamiento de texto\n",
+    "nltk.download('stopwords')\n",
+    "stop = set(stopwords.words('english')) \n",
+    "sno = SnowballStemmer('english') \n",
+    "\n",
+    "def cleanhtml(sentence): \n",
+    "    cleanr = re.compile('<.*?>')\n",
+    "    cleantext = re.sub(cleanr, ' ', sentence)\n",
+    "    return cleantext\n",
+    "\n",
+    "def cleanpunc(sentence): \n",
+    "    cleaned = re.sub(r'[?|!|\\'|\"|#]',r'',sentence)\n",
+    "    cleaned = re.sub(r'[.|,|)|(|\\|/]',r' ',cleaned)\n",
+    "    return cleaned\n",
+    "\n",
+    "# Procesamiento del texto de los tweets\n",
+    "final_string = []\n",
+    "for sent in data['Tweet_Text'].values:\n",
+    "    filtered_sentence = []\n",
+    "    sent = cleanhtml(sent) \n",
+    "    for w in sent.split():\n",
+    "        cleaned_words = cleanpunc(w)\n",
+    "        if cleaned_words.isalpha() and len(cleaned_words) > 2:\n",
+    "            if cleaned_words.lower() not in stop:\n",
+    "                stemmed_word = sno.stem(cleaned_words.lower())\n",
+    "                filtered_sentence.append(stemmed_word)\n",
+    "    final_string.append(\" \".join(filtered_sentence))\n",
+    "\n",
+    "# Añadiendo la columna de tweets limpios al DataFrame\n",
+    "data['cleaned_tweet'] = final_string\n",
+    "\n",
+    "# Visualización de los primeros registros del DataFrame modificado\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -71,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
