--- a/proyecto/Proyecto.ipynb
+++ b/proyecto/Proyecto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,19 +58,19 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\marcp\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Date      Time                                         Tweet_Text  Type Media_Type   Hashtags   Tweet_Id                                          Tweet_Url  twt_favourites_IS_THIS_LIKE_QUESTION_MARK  Retweets  Unnamed: 10  Unnamed: 11                                      cleaned_tweet\n",
-      "0  16-11-11  15:26:37  Today we express our deepest gratitude to all ...  text      photo  ThankAVet  7.970e+17  https://twitter.com/realDonaldTrump/status/797...                                     127213     41112          NaN          NaN  today express deepest gratitud serv arm thankavet\n",
-      "1  16-11-11  13:33:35  Busy day planned in New York. Will soon be mak...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/797...                                     141527     28654          NaN          NaN  busi day plan new soon make import decis peopl...\n",
-      "2  16-11-11  11:14:20  Love the fact that the small groups of protest...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/797...                                     183729     50039          NaN          NaN  love fact small group protest last night passi...\n",
-      "3  16-11-11   2:19:44  Just had a very open and successful presidenti...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/796...                                     214001     67010          NaN          NaN    open success presidenti profession incit unfair\n",
-      "4  16-11-11   2:10:46  A fantastic day in D.C. Met with President Oba...  text        NaN        NaN  7.970e+17  https://twitter.com/realDonaldTrump/status/796...                                     178499     36688          NaN          NaN  fantast day met presid obama first realli good...\n"
+      "0    today express deepest gratitud serv arm thankavet\n",
+      "1    busi day plan new soon make import decis peopl...\n",
+      "2    love fact small group protest last night passi...\n",
+      "3      open success presidenti profession incit unfair\n",
+      "4    fantast day met presid obama first realli good...\n",
+      "Name: cleaned_tweet, dtype: object\n"
      ]
     }
    ],
@@ -111,15 +111,87 @@
     "data['cleaned_tweet'] = final_string\n",
     "\n",
     "# Visualización de los primeros registros del DataFrame modificado\n",
-    "print(data.head())"
+    "print(data[\"cleaned_tweet\"].head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    41112\n",
+      "1    28654\n",
+      "2    50039\n",
+      "3    67010\n",
+      "4    36688\n",
+      "Name: Retweets, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[\"Retweets\"].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "media_likes= data[\"twt_favourites_IS_THIS_LIKE_QUESTION_MARK\"].median()\n",
+    "media_retweets=data[\"Retweets\"].median()\n",
+    "data['Viral'] = data.apply(lambda x: \"mucho\" if (x['twt_favourites_IS_THIS_LIKE_QUESTION_MARK'] + x['Retweets']) >= (media_likes + media_retweets) * 3\n",
+    "                       else (\"moderado\" if (x['twt_favourites_IS_THIS_LIKE_QUESTION_MARK'] + x['Retweets']) >= (media_likes + media_retweets)*0.5\n",
+    "                             else \"poco\"), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Viral\n",
+      "moderado    3464\n",
+      "poco        2272\n",
+      "mucho       1639\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[\"Viral\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'(' was never closed (4221494962.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[21], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    X_train=cv.train_test_split(\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m '(' was never closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn.model_selection as cv\n",
+    "X_train=cv.train_test_split(\n",
+    "print('Size training: ',X_train.shape)\n",
+    "print('Size test: ',X_test.shape)\n",
+    "X_test.head()"
+   ]
   },
   {
    "cell_type": "code",
