--- a/ses3KNN/KNN and NB/KNN.ipynb
+++ b/ses3KNN/KNN and NB/KNN.ipynb
@@ -74,7 +74,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3- Simple cross-validation"
    ]
