--- a/ses3KNN/KNN and NB/NaiveBayes.ipynb
+++ b/ses3KNN/KNN and NB/NaiveBayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,24 +183,24 @@
        "3   1   0  1.00000 -0.45161  1.00000  1.00000  0.71216 -1.00000  0.00000   \n",
        "4   1   0  1.00000 -0.02401  0.94140  0.06531  0.92106 -0.23255  0.77152   \n",
        "\n",
-       "        9  ...       25       26       27       28       29       30       31  \\\n",
-       "0  0.03760 ... -0.51171  0.41078 -0.46168  0.21266 -0.34090  0.42267 -0.54487   \n",
-       "1 -0.04549 ... -0.26569 -0.20468 -0.18401 -0.19040 -0.11593 -0.16626 -0.06288   \n",
-       "2  0.01198 ... -0.40220  0.58984 -0.22145  0.43100 -0.17365  0.60436 -0.24180   \n",
-       "3  0.00000 ...  0.90695  0.51613  1.00000  1.00000 -0.20099  0.25682  1.00000   \n",
-       "4 -0.16399 ... -0.65158  0.13290 -0.53206  0.02431 -0.62197 -0.05707 -0.59573   \n",
+       "        9   ...       25       26       27       28       29       30  \\\n",
+       "0  0.03760  ... -0.51171  0.41078 -0.46168  0.21266 -0.34090  0.42267   \n",
+       "1 -0.04549  ... -0.26569 -0.20468 -0.18401 -0.19040 -0.11593 -0.16626   \n",
+       "2  0.01198  ... -0.40220  0.58984 -0.22145  0.43100 -0.17365  0.60436   \n",
+       "3  0.00000  ...  0.90695  0.51613  1.00000  1.00000 -0.20099  0.25682   \n",
+       "4 -0.16399  ... -0.65158  0.13290 -0.53206  0.02431 -0.62197 -0.05707   \n",
        "\n",
-       "        32       33  34  \n",
-       "0  0.18641 -0.45300   g  \n",
-       "1 -0.13738 -0.02447   b  \n",
-       "2  0.56045 -0.38238   g  \n",
-       "3 -0.32382  1.00000   b  \n",
-       "4 -0.04608 -0.65697   g  \n",
+       "        31       32       33  34  \n",
+       "0 -0.54487  0.18641 -0.45300   g  \n",
+       "1 -0.06288 -0.13738 -0.02447   b  \n",
+       "2 -0.24180  0.56045 -0.38238   g  \n",
+       "3  1.00000 -0.32382  1.00000   b  \n",
+       "4 -0.59573 -0.04608 -0.65697   g  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -233,24 +233,24 @@
    "source": [
     "# Separation into data and label\n",
     "\n",
-    "X = df.drop([34],axis=1).as_matrix()         # Data\n",
-    "y = df[34].as_matrix()\n",
+    "X = df.drop([34],axis=1).values         # Data\n",
+    "y = df[34].values\n",
     "print(X.shape)\n",
     "print(y.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8836741363211951"
+       "np.float64(0.8888095238095237)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "import sklearn.neighbors as nb\n",
     "\n",
-    "cv = StratifiedKFold(n_splits=10, random_state=1) \n",
+    "cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=1) \n",
     "\n",
     "gnb = GaussianNB()\n",
     "cv_scores = cross_val_score(gnb,X=X,y=y,cv=cv)\n",
@@ -272,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 93  33]\n",
-      " [  8 217]]\n",
-      "0.8831908831908832\n"
+      "[[ 94  32]\n",
+      " [  7 218]]\n",
+      "0.8888888888888888\n"
      ]
     }
    ],
@@ -298,19 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          b       0.92      0.74      0.82       126\n",
-      "          g       0.87      0.96      0.91       225\n",
+      "           b       0.93      0.75      0.83       126\n",
+      "           g       0.87      0.97      0.92       225\n",
       "\n",
-      "avg / total       0.89      0.88      0.88       351\n",
+      "    accuracy                           0.89       351\n",
+      "   macro avg       0.90      0.86      0.87       351\n",
+      "weighted avg       0.89      0.89      0.89       351\n",
       "\n"
      ]
     }
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,23 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected threshold in 10-fold cross validation: 0.23134286828581097\n",
+      "Selected threshold in 10-fold cross validation: 0.24470418912178332\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Inanna\\Anaconda2\\envs\\tensorflow\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -418,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,19 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "        0.0       0.83      0.96      0.89        70\n",
-      "        1.0       0.88      0.61      0.72        36\n",
+      "         0.0       0.83      0.96      0.89        70\n",
+      "         1.0       0.88      0.61      0.72        36\n",
       "\n",
-      "avg / total       0.85      0.84      0.83       106\n",
+      "    accuracy                           0.84       106\n",
+      "   macro avg       0.85      0.78      0.80       106\n",
+      "weighted avg       0.85      0.84      0.83       106\n",
       "\n"
      ]
     }
@@ -459,19 +455,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "        0.0       0.82      0.96      0.88        70\n",
-      "        1.0       0.88      0.58      0.70        36\n",
+      "         0.0       0.82      0.96      0.88        70\n",
+      "         1.0       0.88      0.58      0.70        36\n",
       "\n",
-      "avg / total       0.84      0.83      0.82       106\n",
+      "    accuracy                           0.83       106\n",
+      "   macro avg       0.85      0.77      0.79       106\n",
+      "weighted avg       0.84      0.83      0.82       106\n",
       "\n"
      ]
     }
@@ -486,7 +484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -500,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
