--- a/proyecto/Preprocessing.ipynb
+++ b/proyecto/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +185,9 @@
     "X = count_vectorizer.fit_transform( X[:, -1])\n",
     "feature_names = count_vectorizer.get_feature_names_out()\n",
     "X = pandas.DataFrame(X.toarray(), columns=feature_names)\n",
+    "X.to_csv('X.csv', index=False)\n",
+    "df.drop('cleaned_tweet', axis=1, inplace=True)\n",
+    "df.to_csv('y.csv', index=False)\n",
     "print(X.shape)\n",
     "print(y.shape)"
    ]
