preprocessing knn and naive bayes

--- a/proyecto/Proyecto.ipynb
+++ b/proyecto/Proyecto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -417,6 +417,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 most frequent words:\n",
+      "                      word  frequency\n",
+      "17                   trump        779\n",
+      "0                    great        705\n",
+      "101                  thank        675\n",
+      "134                hillari        367\n",
+      "117  makeamericagreatagain        347\n",
+      "74                 america        311\n",
+      "73                    make        304\n",
+      "46                     get        295\n",
+      "4                     poll        280\n",
+      "197                    new        280\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Inicializar el CountVectorizer\n",
+    "count_vectorizer = CountVectorizer()\n",
+    "\n",
+    "# Ajustar y transformar los datos\n",
+    "Bow_train = count_vectorizer.fit_transform(X_train[:, -1])\n",
+    "\n",
+    "# Obtener el vocabulario\n",
+    "vocabulary = count_vectorizer.vocabulary_\n",
+    "\n",
+    "# Contar las frecuencias de las palabras en Bow_train\n",
+    "word_counts = np.asarray(Bow_train.sum(axis=0)).flatten()\n",
+    "\n",
+    "# Crear un DataFrame con palabras y sus frecuencias\n",
+    "word_freq = pd.DataFrame({\n",
+    "    \"word\": list(vocabulary.keys()),\n",
+    "    \"frequency\": word_counts[list(vocabulary.values())]\n",
+    "})\n",
+    "\n",
+    "# Ordenar por frecuencia de mayor a menor\n",
+    "word_freq = word_freq.sort_values(by=\"frequency\", ascending=False)\n",
+    "\n",
+    "# Guardar en un archivo CSV\n",
+    "word_freq.to_csv(\"word_frequencies.csv\", index=False)\n",
+    "\n",
+    "# Mostrar las 10 palabras más frecuentes (opcional)\n",
+    "print(\"Top 10 most frequent words:\")\n",
+    "print(word_freq.head(10))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -425,15 +483,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(7375, 4824)\n",
-      "(7375,)\n"
+     "ename": "AttributeError",
+     "evalue": "'matrix' object has no attribute 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m word_frequencies \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39msum(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      4\u001b[0m filtered_words \u001b[38;5;241m=\u001b[39m word_frequencies[word_frequencies \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m]\n\u001b[1;32m----> 5\u001b[0m X \u001b[38;5;241m=\u001b[39m X[\u001b[43mfiltered_words\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m]\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(X\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(y\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'matrix' object has no attribute 'index'"
      ]
     }
    ],
@@ -446,19 +507,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3464433192500174\n"
+      "0.5852158277349395\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import cross_val_score\n",
     "import numpy as np\n",
@@ -470,7 +531,7 @@
     "cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=1)\n",
     "\n",
     "# Inicializar el clasificador Naive Bayes\n",
-    "gnb = GaussianNB()\n",
+    "gnb = MultinomialNB()\n",
     "\n",
     "# Realizar validación cruzada\n",
     "cv_scores = cross_val_score(gnb, X=X_dense, y=y, cv=cv)\n",
@@ -488,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
