naive knn and decision

--- a/proyecto/NaiveBayes.ipynb
+++ b/proyecto/NaiveBayes.ipynb
@@ -16,34 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   abc  abl  abolish  absolut  accept  accord  account  across  act  action  \\\n",
-      "0    0    0        0        0       0       0        0       0    0       0   \n",
-      "1    0    0        0        0       0       0        0       0    0       0   \n",
-      "2    0    0        0        0       0       0        0       0    0       0   \n",
-      "3    0    0        0        0       0       0        0       0    0       0   \n",
-      "4    0    0        0        0       0       0        0       0    0       0   \n",
-      "\n",
-      "   ...  york  yorker  youll  young  your  youv  yuge  zero  zogbi  zone  \n",
-      "0  ...     0       0      0      0     0     0     0     0      0     0  \n",
-      "1  ...     0       0      0      0     0     0     0     0      0     0  \n",
-      "2  ...     0       0      0      0     0     0     0     0      0     0  \n",
-      "3  ...     0       0      0      0     0     0     0     0      0     0  \n",
-      "4  ...     0       0      0      0     0     0     0     0      0     0  \n",
-      "\n",
-      "[5 rows x 1477 columns]\n",
-      "   Viral\n",
-      "0      2\n",
-      "1      2\n",
-      "2      2\n",
-      "3      2\n",
-      "4      2\n"
+      "(7375, 1477)\n",
+      "(7375, 1)\n"
      ]
     }
    ],
@@ -52,23 +33,25 @@
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "X = pandas.read_csv('X.csv', sep=',', na_values=\"\")\n",
     "y = pandas.read_csv('y.csv', sep=',', na_values=\"\")\n",
-    "print(X.head())\n",
-    "print(y.head())"
+    "print(X.shape)\n",
+    "print(y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5670500049640931\n",
-      "0.4673943659382319\n"
+      "0.7852206079727012\n",
+      "0.4821627266476193\n"
      ]
     }
    ],
@@ -78,8 +61,6 @@
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "import sklearn.neighbors as nb\n",
     "\n",
-    "# Asegurarse de que y es un array unidimensional\n",
-    "y = y.values.ravel()\n",
     "\n",
     "# Configuración de la validación cruzada\n",
     "cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=1)\n",
@@ -106,21 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1285  601  749]\n",
-      " [ 556 1621  291]\n",
-      " [ 709  287 1276]]\n",
-      "0.5670508474576271\n",
-      "[[ 338  438 1859]\n",
-      " [ 198 1157 1113]\n",
-      " [ 134  186 1952]]\n",
-      "0.4673898305084746\n"
+      "[[1518  950]\n",
+      " [ 634 4273]]\n",
+      "0.7852203389830509\n",
+      "[[2177  291]\n",
+      " [3528 1379]]\n",
+      "0.4821694915254237\n"
      ]
     }
    ],
@@ -148,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -157,23 +136,21 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    moderado       0.50      0.49      0.50      2635\n",
-      "       mucho       0.65      0.66      0.65      2468\n",
-      "        poco       0.55      0.56      0.56      2272\n",
+      "       mucho       0.71      0.62      0.66      2468\n",
+      "        poco       0.82      0.87      0.84      4907\n",
       "\n",
-      "    accuracy                           0.57      7375\n",
-      "   macro avg       0.57      0.57      0.57      7375\n",
-      "weighted avg       0.57      0.57      0.57      7375\n",
+      "    accuracy                           0.79      7375\n",
+      "   macro avg       0.76      0.74      0.75      7375\n",
+      "weighted avg       0.78      0.79      0.78      7375\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    moderado       0.50      0.13      0.20      2635\n",
-      "       mucho       0.65      0.47      0.54      2468\n",
-      "        poco       0.40      0.86      0.54      2272\n",
+      "       mucho       0.38      0.88      0.53      2468\n",
+      "        poco       0.83      0.28      0.42      4907\n",
       "\n",
-      "    accuracy                           0.47      7375\n",
-      "   macro avg       0.52      0.49      0.43      7375\n",
-      "weighted avg       0.52      0.47      0.42      7375\n",
+      "    accuracy                           0.48      7375\n",
+      "   macro avg       0.60      0.58      0.48      7375\n",
+      "weighted avg       0.68      0.48      0.46      7375\n",
       "\n"
      ]
     }
@@ -183,6 +160,138 @@
     "\n",
     "print(classification_report(y, predictedm))\n",
     "print(classification_report(y, predictedg))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adjusting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Focus on predict class 1\n",
+    "\n",
+    "\n",
+    "y2 = np.zeros((y.shape))\n",
+    "y2[y=='mucho']=1\n",
+    "y2[y=='poco']=0\n",
+    "\n",
+    "\n",
+    "(X_train, X_test,  y_train, y_test) = train_test_split(X, y2, test_size=.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected threshold in 10-fold cross-validation: 0.47499336966857736\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "for train_index, test_index in kf.split(X_train, y_train):\n",
+    "    # Seleccionamos las filas correspondientes\n",
+    "    X_train2, X_test2 = X.iloc[train_index], X.iloc[test_index]\n",
+    "    y_train2, y_test2 = y2[train_index], y2[test_index]\n",
+    "\n",
+    "    # Entrenamos el modelo\n",
+    "    clf.fit(X_train2, y_train2)\n",
+    "    probs = clf.predict_proba(X_test2)\n",
+    "    ProbClass1 = probs[:, 1]\n",
+    "\n",
+    "    # Ahora especificamos 'average' para F1 Score\n",
+    "    res = np.array([[th, f1_score(y_test2, filterp(th, ProbClass1), average='macro')] for th in np.sort(ProbClass1)])\n",
+    "    \n",
+    "    maxF = np.max(res[:, 1])\n",
+    "    pl = np.argmax(res[:, 1])\n",
+    "    optimal_th = res[pl, 0]\n",
+    "    lth.append(optimal_th)\n",
+    "\n",
+    "# Promedio del threshold\n",
+    "thdef = np.mean(lth)\n",
+    "print(\"Selected threshold in 10-fold cross-validation:\", thdef)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train a classifier with the whole training data \n",
+    "clf = MultinomialNB()\n",
+    "clf.fit(X_train, y_train)\n",
+    "# Obtain probabilities for data on test set\n",
+    "probs = clf.predict_proba(X_test)\n",
+    "# Generate predictions using probabilities and threshold found on 10 folds cross-validation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.83      0.86      0.84      1504\n",
+      "         1.0       0.68      0.62      0.65       709\n",
+      "\n",
+      "    accuracy                           0.78      2213\n",
+      "   macro avg       0.75      0.74      0.75      2213\n",
+      "weighted avg       0.78      0.78      0.78      2213\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = filterp(thdef,probs[:,1])\n",
+    "# Print results with this prediction vector\n",
+    "print(classification_report(y_test, pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.82      0.87      0.85      1504\n",
+      "         1.0       0.69      0.60      0.64       709\n",
+      "\n",
+      "    accuracy                           0.78      2213\n",
+      "   macro avg       0.75      0.74      0.74      2213\n",
+      "weighted avg       0.78      0.78      0.78      2213\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = MultinomialNB()\n",
+    "clf.fit(X_train, y_train)\n",
+    "pred=clf.predict(X_test)\n",
+    "print(classification_report(y_test, pred))"
    ]
   }
  ],
