metamethos sin provarlo entero

--- a/proyecto/MetaMethods.ipynb
+++ b/proyecto/MetaMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -38,20 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Params fo Knn= {'n_neighbors': 9, 'weights': 'distance'} Accuracy= 0.6965471594043022\n",
-      "Accuracy: 0.475 [Naive Bayes]\n",
-      "Accuracy: 0.697 [Knn (3)]\n",
-      "Accuracy: 0.712 [Dec. Tree]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "#from sklearn.linear_model import LogisticRegression\n",
@@ -61,7 +50,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "cv=50\n",
+    "cv=5 #HE bajado el cv de 50 a 5 porque tardaba demasiado\n",
     "\n",
     "clf1 = GaussianNB()\n",
     "\n",
@@ -84,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,15 +143,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.702 [1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import BaggingClassifier\n",
     "\n",
