--- a/proyecto/MetaMethods.ipynb
+++ b/proyecto/MetaMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params fo Knn= {'n_neighbors': 5, 'weights': 'distance'} Accuracy= 0.6779661016949153\n",
+      "Accuracy: 0.434 [Naive Bayes]\n",
+      "Accuracy: 0.678 [Knn (3)]\n",
+      "Accuracy: 0.696 [Dec. Tree]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "#from sklearn.linear_model import LogisticRegression\n",
@@ -141,9 +152,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.679 [1]\n",
+      "Accuracy: 0.655 [2]\n",
+      "Accuracy: 0.713 [5]\n",
+      "Accuracy: 0.702 [10]\n",
+      "Accuracy: 0.715 [20]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import BaggingClassifier\n",
     "\n",
