--- a/proyecto/NaiveBayes.ipynb
+++ b/proyecto/NaiveBayes.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IMPORTAR EL DATASET"
+    "### IMPORTS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import warnings\n",
+    "import sklearn  \n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -166,13 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.6475372797107998\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.79      0.45      0.58      1173\n",
@@ -199,6 +201,7 @@
     "clf.fit(X_train, y_train)\n",
     "probs = clf.predict_proba(X_test)\n",
     "pred = filterp(thdef, probs[:, 1])\n",
+    "print(sklearn.metrics.accuracy_score(y_test, pred))\n",
     "print(classification_report(y_test, pred))\n",
     "cm = (confusion_matrix(y_test, pred))\n",
     "plt.figure(figsize=(6, 6))\n",
@@ -208,13 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.7121554450971532\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.72      0.76      0.74      1173\n",
@@ -241,6 +245,7 @@
     "clf = MultinomialNB()\n",
     "clf.fit(X_train, y_train)\n",
     "pred = clf.predict(X_test)\n",
+    "print(sklearn.metrics.accuracy_score(y_test, pred))\n",
     "print(classification_report(y_test, pred))\n",
     "cm = (confusion_matrix(y_test, pred))\n",
     "plt.figure(figsize=(6, 6))\n",
