naiv, knn, dectree, prep

--- a/proyecto/Preprocessing.ipynb
+++ b/proyecto/Preprocessing.ipynb
@@ -8,8 +8,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORTS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import pandas\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pandas.plotting import scatter_matrix\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CARGAR LOS DATOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -26,17 +53,18 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "import pandas\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pandas.plotting import scatter_matrix\n",
-    "import numpy as np\n",
-    "\n",
     "pandas.set_option('display.max_columns', None)  \n",
     "pandas.set_option('display.expand_frame_repr', False)\n",
     "pandas.set_option('display.precision', 3)\n",
     "df = pandas.read_csv('data.csv', sep=',', na_values=\"\")\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LIMPIAR EL TEXTO"
    ]
   },
   {
@@ -107,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CREAR PORCENTAJE DE MUCHO Y POCO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -128,6 +163,13 @@
     "df['Viral'] = df.apply(lambda x: 'mucho' if (x['twt_favourites_IS_THIS_LIKE_QUESTION_MARK'] + x['Retweets']) >= (media_likes + media_retweets) * 1.1\n",
     "                             else ('poco'), axis=1)\n",
     "print(df[\"Viral\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ELIMINAR COLUMNAS INECESAREAS"
    ]
   },
   {
@@ -165,6 +207,13 @@
     "# Definir X como todas las columnas excepto 'Viral'\n",
     "X= df.drop('Viral', axis=1).values\n",
     "print(df[0:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GENERAR COLUMNAS POR PALABRAS I FILTRAR POR UMBRAL"
    ]
   },
   {
