he añadido Comentarios i buscar parejas relacionadas

--- a/proyecto/NaiveBayes.ipynb
+++ b/proyecto/NaiveBayes.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "import warnings\n",
     "import sklearn  \n",
+    "\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,12 +70,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Buscar parejas correlacionadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Correlated Pairs\n",
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "word_correlations = np.corrcoef(X, rowvar=False)\n",
+    "top_correlated_pairs = []\n",
+    "threshold = 0.5  \n",
+    "for i in range(word_correlations.shape[0]):\n",
+    "    for j in range(i + 1, word_correlations.shape[1]):\n",
+    "        if abs(word_correlations[i, j]) > threshold:\n",
+    "            top_correlated_pairs.append((i, j, word_correlations[i, j]))\n",
+    "print(\"Top Correlated Pairs\")\n",
+    "print(len(top_correlated_pairs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### DIVISION DE LOS DATOS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,8 +269,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PRUEBA SIN OPTIMIZAR EL THREESHOLD(0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
